--- a/package.json
+++ b/package.json
@@ -21,7 +21,23 @@
     "url": "https://github.com/sailsbot/roadstead-sentinel/issues"
   },
   "homepage": "https://github.com/sailsbot/roadstead-sentinel#readme",
-  "dependencies": {},
+  "dependencies": {
+    "connect-redis": "latest",
+    "grunt": "1.0.1",
+    "sails": "^1.0.0-18",
+    "sails-hook-grunt": "^1.0.7",
+    "sails-hook-orm": "^2.0.0-1",
+    "sails-hook-sockets": "^1.3.0",
+    "sails-mongo": "latest",
+    "sails-mysql": "latest",
+    "sails-postgresql": "latest",
+    "sails-redis": "latest",
+    "sails.io.js": "latest",
+    "sails.io.js-dist": "latest",
+    "skipper-s3": "latest",
+    "socket.io-client": "1.7.1",
+    "socket.io-redis": "latest"
+  },
   "devDependencies": {
     "mocha": "3.0.2"
   }
